final changes, fixed click for horizontal scrolling
git-svn-id: https://svn.code.sf.net/p/plexil/code/trunk@2370 d2be67b0-814c-0410-949f-d215b6b29573

--- a/src/viewer/styles.css
+++ b/src/viewer/styles.css
@@ -330,4 +330,9 @@ a:visited {
 	color:#00F;
 }
 
+a {
+	color:#00F;
+	text-decoration:underline;
+}
+
 /* End Token Details */
